--- a/style.css
+++ b/style.css
@@ -1,14 +1,13 @@
 * {
     margin: 0;
     padding: 0;
-    width: 1710;
+    width: 1730;
 }
 
 body {
     padding: 0;
     margin: 0;
 }
-
 .logo {
     /*
     display:flex;
@@ -20,25 +19,22 @@ body {
     width: 880px;
     height: 240px;
 }
-
 nav {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 1710;
     height: 90px;
-    margin: 60px 0 60px 0;
+    margin: 60px 5% 60px 5%;
     border-radius: 10px;
     background-color: #333333;
 }
-
 ul {
     display: flex;
     justify-content: space-around;
     padding: 0;
     margin: 0;
 }
-
 ul li {
   padding: 5px;
   width: 200px;
@@ -50,29 +46,43 @@ ul li {
   text-align: center;
   list-style: none;
 }
-
 ul li a {
     color: white;
     text-decoration: none;
 }
-
 ul li a:hover {
     color:#f4ce14;
 }
-
 /* Quando eu faço isso fica assim para geral 
 ul li a:visited {
     color:#495e57;
 }
 */
-
 .call-to-action {
-    background-image: url ("../img/macarrao-fine-edi.jpg");
+    display: block;
+    margin-left: 5%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: #333333;
+    background-image: url("/img/macarrao-fine-edit.jpg");
+    color: white;
     width: 1710px;
     height: 335px;
+    border-radius: 10px;
 }
-
-
+.call-to-action h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 64px;
+    font-weight: bold;
+    text-shadow: #f8f8f8 1px 0 1px;
+    margin: 49px 0px 50px 30px;    
+    padding-top: 50px;
+}
+.call-to-action p {
+    font-size: 32px;
+    font-weight:normal;
+    text-shadow: #f8f8f8 1px 0 1px;
+    margin: 50px 0px 0px 30px;
+}
 .container {
     width: 1730;
     height: 1968;
@@ -81,4 +91,99 @@ ul li a:visited {
     justify-content: space-around;
     padding: 0;
     margin: 0;
+}
+.service {
+    display: flex;
+    
+    /* Then we define the flow direction 
+       and if we allow the items to wrap 
+     * Remember this is the same as:
+     * flex-direction: row;
+     * flex-wrap: wrap;
+     */
+     flex-direction: row;
+    flex-flow: row wrap;
+    
+    /* Then we define how is distributed the remaining space */
+    justify-content: space-around;
+    padding: 5px;
+    width: 1730px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    border-radius: 10px;
+}
+.service-item {
+  background: #f4e5d6;
+  border-radius: 10px;
+  width: 530px;
+  height: 700px;
+  margin: 10px;
+  padding: 10px;
+}
+.service-item h2 {
+        font-size: 32px;
+        font-weight:bold;
+        color:black;
+        padding-left: 10px;
+        padding-top: 50px;
+        padding-bottom: 50px;
+        
+}
+.service-item p {
+        font-size: 20px;
+        font-weight:bold;
+        color:black;
+        padding-left: 10px;
+        padding-top: 10px;
+        padding-bottom: 5px;
+
+}
+.service-item-links {
+    display: block;
+    padding-top:20px ;
+}
+.service-item-schedule {
+    margin-left: 10px;
+}
+
+.service-photo {
+    padding-left: 10px;
+    width: 495px;
+    height: 330px;
+}
+/*
+.footer-layout {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    
+}
+.footer-layout-test {
+    flex: 1;
+}
+.footer-layout-logo-image {
+    height: 141px;
+    width: 120px;
+}
+.footer-layout-brand p {
+    float: right;
+}
+*/
+footer{
+    display: flex;
+    width: 1730px;
+}
+
+footer div{
+    flex: 1;
+}
+
+footer> div > img{
+    margin-top: 20px;
+    width: 70px;
+    height: 100px;
+}
+
+footer > div > p{
+    float: right;
 }
